Bug 428154 - The tooltips ‘Copy number’ and ‘Copy unit and number’ can’t be translated (always shown in English)
Summary: The tooltips ‘Copy number’ and ‘Copy unit and number’ can’t be translated (al...
Status: RESOLVED FIXED
Alias: None
Product: krunner
Classification: Plasma
Component: converter (other bugs)
Version First Reported In: 5.20.1
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Alexander Lohnau
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-10-23 19:33 UTC by Karl Ove Hufthammer
Modified: 2020-10-23 19:57 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: In 5.20 marked as translatable
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Karl Ove Hufthammer 2020-10-23 19:33:57 UTC
SUMMARY
The tooltips ‘Copy number’ and ‘Copy unit and number’ always appear in English. It’s not possible to translate them.

STEPS TO REPRODUCE
1. Start KRunner in a non-English locale.
2. Write a unit, e.g., ‘5 km’.
3. Hover over the two ‘copy’ buttons.

OBSERVED RESULT
The tooltips for the buttons are shown as ‘Copy number’ and ‘Copy unit and number’.

EXPECTED RESULT
The tooltips should be shown in language of the current locale.

SOFTWARE/OS VERSIONS
Operating System: openSUSE Tumbleweed 20201022
KDE Plasma Version: 5.20.1
KDE Frameworks Version: 5.75.0
Qt Version: 5.15.1
Kernel Version: 5.8.15-1-default
OS Type: 64-bit
Processors: 4 × Intel® Core™ i5-2500 CPU @ 3.30GHz
Memory: 15.6 GiB of RAM
Graphics Processor: GeForce GTX 1060 3GB/PCIe/SSE2

ADDITIONAL INFORMATION
It’s not possible translate the strings, since they’re not listed in the corresponding POT file (https://websvn.kde.org/*checkout*/trunk/l10n-kf5/templates/messages/kdeplasma-addons/plasma_runner_converterrunner.pot).
Comment 1 Bug Janitor Service 2020-10-23 19:48:21 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kdeplasma-addons/-/merge_requests/33
Comment 2 Alexander Lohnau 2020-10-23 19:52:27 UTC
Git commit 753bbb37e05b832fdedff801fe20c6e04f52eba2 by Alexander Lohnau.
Committed on 23/10/2020 at 19:52.
Pushed by alex into branch 'master'.

Fix translations for tooltips
FIXED-IN: 5.21

It actually was one of my first KDE patches where I had no idea how the translation system worked ;)

M  +2    -2    runners/converter/converterrunner.cpp

https://invent.kde.org/plasma/kdeplasma-addons/commit/753bbb37e05b832fdedff801fe20c6e04f52eba2
Comment 3 Alexander Lohnau 2020-10-23 19:55:43 UTC
Git commit a89ebe42449ee0d98b3af6493470daeebb3181ad by Alexander Lohnau.
Committed on 23/10/2020 at 19:53.
Pushed by alex into branch 'Plasma/5.20'.

Fix translations for tooltips
FIXED-IN: 5.21

It actually was one of my first KDE patches where I had no idea how the translation system worked ;)

M  +2    -2    runners/converter/converterrunner.cpp

https://invent.kde.org/plasma/kdeplasma-addons/commit/a89ebe42449ee0d98b3af6493470daeebb3181ad