Fix translations for tooltips

BUG: 428154
FIXED-IN: 5.21

It actually was one of my first KDE patches where I had no idea how the translation system worked ;)